--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-elm": "^1.3.0"
+    "grunt-elm": "wildlyinaccurate/grunt-elm#elm-0.16"
   }
 }
