--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elm-starter",
+  "name": "elm-example-ajax",
   "version": "1.0.0",
-  "description": "A jumping-off point for elm apps",
+  "description": "An example of performing ajax requests with Elm",
   "main": "index.js",
   "scripts": {
     "test": "none",
@@ -9,14 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/murphyrandle/elm-starter.git"
+    "url": "git@github.com:splodingsocks/elm-example-ajax.git"
   },
   "author": "Murphy Randle",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/murphyrandle/elm-starter/issues"
-  },
-  "homepage": "https://github.com/murphyrandle/elm-starter#readme",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
